--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>User Feedback App</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<div class="container">
+    <h2>User Feedback</h2>
+    <input type="text" id="name" placeholder="Your Name">
+    <input type="email" id="email" placeholder="Your Email">
+    <textarea id="message" placeholder="Your Feedback"></textarea>
+    <button onclick="submitFeedback()">Submit</button>
+    <p id="status"></p>
+</div>
 
+<script src="script.js"></script>
+</body>
+</html>
