--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>User Feedback App</title>
-    <link rel="stylesheet" href="style.css">
+    <title>User Feedback</title>
 </head>
 <body>
-<div class="container">
-    <h2>User Feedback</h2>
-    <input type="text" id="name" placeholder="Your Name">
-    <input type="email" id="email" placeholder="Your Email">
-    <textarea id="message" placeholder="Your Feedback"></textarea>
-    <button onclick="submitFeedback()">Submit</button>
-    <p id="status"></p>
-</div>
 
-<script src="script.js"></script>
+<h2>User Feedback Form</h2>
+
+<form>
+    <input type="text" placeholder="Name" required><br><br>
+    <input type="email" placeholder="Email" required><br><br>
+    <textarea placeholder="Enter your feedback"></textarea><br><br>
+    <button type="submit">Submit</button>
+</form>
+
 </body>
 </html>
