--- a/wed.html
+++ b/wed.html
@@ -1,4 +1,4 @@
-//commenting agaian
+//commenting again
 <form id="feedbackForm">
   <input type="text" placeholder="Name" id="name" required />
   <input type="email" placeholder="Email" id="email" required />
